--- a/GameScreen.xaml
+++ b/GameScreen.xaml
@@ -33,7 +33,7 @@
                                 <!-- DarkTurquoise -->
                             </LinearGradientBrush>
                         </Border.Background>
-                        <StackPanel>
+                        <StackPanel x:Name="QuestionsStackPanel" Grid.Column="0" Grid.ColumnSpan="3" Margin="10">
                             <TextBlock x:Name="Player1NameLabel" Text="Player 1" HorizontalAlignment="Center" FontWeight="Bold" FontSize="18" Margin="0,20,0,0"/>
                             <TextBlock Text="Question:" FontWeight="Bold" Margin="10,20,10,0"/>
                             <TextBlock x:Name="Player1Question" Text="Question 1" Margin="10,10,10,20"/>
