--- a/AdminScreen.xaml
+++ b/AdminScreen.xaml
@@ -109,7 +109,7 @@
 
                                     <!-- Headers for each field -->
                                     <StackPanel Grid.Row="0" Orientation="Horizontal">
-                                        <TextBlock Text="Question ID" Margin="5" Width="65"/>
+                                        <TextBlock Text="Question ID" Margin="5" Width="90"/>
                                         <TextBlock Text="Question" Margin="5" Width="200"/>
                                         <TextBlock Text="Answer One" Margin="5" Width="100"/>
                                         <TextBlock Text="Answer Two" Margin="5" Width="100"/>
@@ -122,7 +122,7 @@
                                     <!-- TextBoxes for each field -->
                                     <StackPanel Grid.Row="1" Orientation="Horizontal">
                                         <!-- TextBoxes with corresponding bindings -->
-                                        <TextBox x:Name="newQuestionIDTextBox" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" Width="65" IsEnabled="True"/>
+                                        <TextBox x:Name="newQuestionIDTextBox" Text="Auto Generated" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" Width="90" IsEnabled="False" />
                                         <TextBox x:Name="newQuestionTextBox" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" Width="200"/>
                                         <TextBox x:Name="newAnswerOneTextBox" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" Width="100"/>
                                         <TextBox x:Name="newAnswerTwoTextBox" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Stretch" Width="100"/>
